--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
+  <title>SIVYMO | APP</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Necesitas activar JavaScript para ejecutar esta aplicación web</noscript>
   <div id="root"></div>
 
 </body>
