--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>SIVYMO | APP</title>
+  <title>SIVYMO</title>
 </head>
 
 <body>
